--- a/recipe-backend/vercel.json
+++ b/recipe-backend/vercel.json
@@ -2,14 +2,18 @@
     "version": 2,
     "builds": [
         {
-            "src": "*.js",
+            "src": "/index.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "/",
+            "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
+            "headers": {
+                "Access-Control-Allow-Origin":"*"
+            }
         }
     ]
 }
