--- a/recipe-backend/vercel.json
+++ b/recipe-backend/vercel.json
@@ -8,7 +8,7 @@
     ],
     "routes": [
         {
-            "source": "/api/(.*)",
+            "src": "/api/(.*)",
             "headers": [
                 {
                     "key": "Access-Control-Allow-Credentials",
