--- a/recipe-backend/vercel.json
+++ b/recipe-backend/vercel.json
@@ -1,22 +1,17 @@
 {
+    "installCommand": "npm install --legacy-peer-deps",
     "version": 2,
     "builds": [
-        {
-            "src": "index.js",
-            "use": "@vercel/node"
-        }
+      {
+        "src": "index.js",
+        "use": "@vercel/node"
+      },
+      {
+        "src": "src/**/*",
+        "use": "@vercel/static"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/index.js",
-            "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
-            "headers": {
-                "Access-Control-Allow-Origin":"https://recipe-app-frontend-h2cz75bt4-thilini-maheshikas-projects.vercel.app",
-                "Access-Control-Allow-Credentials":"true",
-                "Access-Control-Allow-Methods":"GET,OPTIONS,PATCH,DELETE,POST,PUT",
-                "Access-Control-Allow-Headers":"X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
-            }
-        }
+      { "src": "/(.*)", "dest": "/" }
     ]
-}
+  }
